<resources>
    <string name="app_name">Spice Assessment</string>

    <string name="loading_text">Loading, please wait…</string>
    <string name="network_error">No network connection.</string>
    <string name="errorString">Something went wrong, Please try again.</string>
    <string name="home_info_text">Product Catalogue</string>
    <string name="search_error_no_text">No Data Available</string>

    <string name="data_by_category">Show category list</string>
    <string name="data_by_rank">Show ranking list</string>

    <string name="detail_info">* Click to view more details.</string>
</resources>
