<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootLayout"
    tools:context=".view.HomeActivity">

    <TextView
        android:id="@+id/txt_info_label"
        style="@style/Label"
        android:text="@string/home_info_text"
        android:gravity="center_horizontal"/>

    <RelativeLayout
        style="@style/MatchLayout"
        android:layout_below="@+id/txt_info_label"
        android:layout_above="@+id/show_rank_wise_switch">

        <LinearLayout
            android:id="@+id/progress_layout"
            style="@style/SectionLayout"
            android:orientation="horizontal"
            android:visibility="visible"
            android:gravity="center"
            android:layout_centerInParent="true">

            <ProgressBar
                style="@style/WrapLayout"/>

            <TextView
                style="@style/WrapLayout"
                android:text="@string/loading_text"
                android:textSize="@dimen/title_text_size"
                android:layout_marginStart="10dp"
                android:gravity="start"/>
        </LinearLayout>

        <TextView
            android:id="@+id/error_label"
            style="@style/Label"
            android:layout_centerInParent="true"
            android:text="@string/search_error_no_text"
            android:visibility="gone"
            android:gravity="center"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:visibility="gone"
            style="@style/SectionPadded"/>

    </RelativeLayout>

    <Switch
        android:id="@+id/show_rank_wise_switch"
        style="@style/SectionPadded"
        android:text="@string/data_by_rank"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>
</RelativeLayout>